# tcp_server_client

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  GenerateMessage.cpp  GenerateMessage.h  main.cpp
server/: CMakeLists.txt  Registry.cpp  Registry.h  RegistryHandler.cpp  RegistryHandler.h  Server.h  Session.h  main.cpp
utils/: FileReaderWriter.cpp  FileReaderWriter.h  NetUtils.cpp  NetUtils.h  Utils.cpp  Utils.h
